subri con github page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,12 @@
-<h1>{{title}}</h1>
+<!-- <h1>{{title}}</h1>
 <hr>
 
 <h1>Contador Component</h1>
 <app-counter></app-counter>
 <hr>
 <app-heroes-hero></app-heroes-hero>
-<app-heroes-lista></app-heroes-lista>
+<app-heroes-lista></app-heroes-lista> -->
+
+<app-dbz-main-page></app-dbz-main-page>
+
+
